crates/reinhardt-core/macros/tests/ui/injectable/fail/no_return_type.rs
use reinhardt_macros::injectable;

#[injectable]
fn bad_factory() {
	// No return type
}

fn main() {}
