crates/reinhardt-core/macros/tests/ui/injectable/fail/no_return_type.stderr
error: #[injectable] function must have a return type
 --> tests/ui/injectable/fail/no_return_type.rs:4:1
  |
4 | fn bad_factory() {
  | ^^^^^^^^^^^^^^^^
